# CmakeBoostTest

./: CMakeLists.txt  README.md  build-all.sh
include/: solution.hpp
src/: CMakeLists.txt  main.cpp  solution.cpp
test/: CMakeLists.txt  solution_test.cpp
